# QtPractice

./: README.md
exercise/: README.md
exercise/DemoMediaPlaye/: DemoMediaPlaye.desktop  DemoMediaPlaye.pro  DemoMediaPlaye.spec  skytree.pri
exercise/Palette/: Helloworld.pro  main.cpp
exercise/Playing/: Playing.desktop  Playing.pro  Playing_harmattan.desktop  main.cpp
exercise/build-testButton-Desktop_Qt_5_1_1_GCC_64bit-Debug/: Makefile  moc_qtquick2applicationviewer.cpp  testButton
exercise/build-testCacheName-Desktop_Qt_5_1_1_GCC_64bit-Debug/: Makefile  (+2 more)
sampleCode/: TestPinchArea.tar.bz2
sampleCode/razer/: .hgignore  CMakeLists.txt  LICENSE
sampleCode/razer/.hg/: dirstate  hgrc  undo.desc
sampleCode/razer/.hg/cache/: branchheads  tags
sampleCode/razer/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
sampleCode/razer/.hg/store/data/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  res.qrc.i  ~2ehgignore.i
sampleCode/razer/.hg/store/data/src/: _razer.cpp.i  _razer.h.i  main.cpp.i
sampleCode/razer/.hg/store/data/ui/razer/: _background.qml.i  _button.qml.i  _cover.qml.i  _razer.qml.i  _title_bar.qml.i  manifest.xml.i  razer.qmlproject.i
sampleCode/razer/.hg/store/data/ui/razer/images/: _x_pulsar.png.i  gloss.png.i  lineedit.png.i  lineedit.sci.i  nexttrack.png.i  nocover.png.i  pause.png.i  play.png.i  previoustrack.png.i  quit.png.i  stop.png.i  stripes.png.i  titlebar.sci.i  toolbutton.sci.i
sampleCode/razer/src/: Razer.cpp  Razer.h  main.cpp
sampleCode/razer/ui/razer/: Background.qml  Button.qml  Cover.qml  Razer.qml  TitleBar.qml  manifest.xml
(+1064 files in other folders)
